<!DOCTYPE resources [
<!ENTITY div ":\u0020">
]>
<resources>
    <string name="app_name">seg2105f23-project-project_grp_12</string>
    <string name="button_sign_in">Sign In</string>
    <string name="hint_username">Username...</string>
    <string name="hint_password">Password...</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="hint_email">Email...</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="text_sign_in">Sign In</string>
    <string name="radio_button_participant">Participant</string>
    <string name="radio_button_club">Cycling Club</string>
    <string name="button_add_event">+ Add Event</string>
    <string name="button_add_event_type">+ Add Event Type</string>

    <string name="label_event_type">Event Type</string>
    <string name="hint_event_name">Event Name</string>
    <string name="label_pace">Pace</string>
    <string name="hint_pace">0:00 /km</string>
    <string name="label_max_age">Maximum Age</string>
    <string name="hint_max_age">99</string>
    <string name="label_min_age">Minimum Age</string>
    <string name="hint_min_age">0</string>
    <string name="label_duration">Duration</string>
    <string name="hint_duration">00:00:00</string>
    <string name="label_distance">Distance</string>
    <string name="hint_distance">0.0 km</string>
    <string name="label_max_participants">Max Participants</string>
    <string name="hint_max_participants">100</string>
    <string name="label_fee">Fee</string>
    <string name="hint_fee">$0.00</string>
    <string name="label_min_skill_level">Minimum Skill Level</string>
    <string name="label_difficulty">Difficulty</string>
    <string name="label_participants">Participants</string>
    <string name="hint_event_type_name">Please enter the event type name...</string>

    <string name="button_edit_event">Edit</string>
    <string name="button_create_event">Create Event</string>
    <string name="button_update_event">Update Event</string>
    <string name="button_delete_event">Delete</string>
    <string name="button_delete_user">Delete</string>
    <string name="mediaLink">Media Link</string>
    <string-array name="min_skill_level_entries">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
        <item>Expert</item>
    </string-array>
    <string-array name="difficulty_entries">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Extreme</item>
    </string-array>

    <string name="labelled_value">"%1$s: %2$s"</string>
    <string name="error_empty">Field is empty</string>
    <string name="error_too_short">Minimum 6 characters</string>
    <string name="error_invalid_age_range">Invalid age range</string>
</resources>